feat: move event producing to CharacterEventStore; change controller to post a character to Kafka; some cleaning